--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "mongodb": "^6.18.0",
     "next": "15.4.5",
